# routini

./: .dockerignore  Justfile  PROFILING.md  README.md  compose.yml
backend-service/: Cargo.toml
backend-service/src/: main.rs
plain/: Cargo.toml
plain/src/: main.rs
routini/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  LOGGING.md  README.md  config.json  initiate_pool.js  justfile  test_fc.js  test_throughput.js
routini/benches/: adaptive_load_balancer.rs  load_balancer.rs
routini/docs/: LOGGING_QUICK_REFERENCE.md  LOGGING_SUMMARY.md
routini/examples/: logging_demo.sh  logging_examples.rs
routini/src/: adaptive_loadbalancer.rs  application.rs  config.rs  connections_tracer.rs  least_connections.rs  lib.rs  load_balancer.rs  main.rs  proxy.rs  reload.rs  route.rs  server_builder.rs  set_strategy_endpoint.rs  update_endpoint.rs
routini/src/adaptive_load_balancing/: adaptive_load_balancer.rs  mod.rs
routini/src/adaptive_loadbalancer/: backend_metrics.rs  background_service.rs  decision_engine.rs  options.rs
routini/src/load_balancing/: background.rs  discovery.rs  health_check.rs  mod.rs
routini/src/load_balancing/selection/: adaptive.rs  algorithms.rs  consistent.rs  least_connections.rs  mod.rs  weighted.rs
routini/src/load_balancing/strategy/: adaptive.rs  algorithms.rs  consistent.rs  fastest_server.rs  fewest_connections.rs  fnv_hash.rs  mod.rs  random.rs  round_robin.rs  utils.rs  weighted.rs
routini/src/utils/: config_loader.rs  constants.rs  mod.rs  tracing.rs
routini/tests/load_balancer/: fewest_connections.rs  helpers.rs  least_connections.rs  main.rs  round_robin.rs
routini/tests/proxy/: helpers.rs  main.rs  upstream_peer.rs
worker/: .dockerignore  Cargo.toml  Dockerfile
worker/src/: lib.rs  main.rs
workers/: Cargo.toml
workers/src/: lib.rs  main.rs
