[package]
name = "routini"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "routini"
path = "src/main.rs"

[profile.profiling]
inherits = "release"
debug = true
strip = false

[dependencies]
pingora = { git = "https://github.com/aleanon/pingora.git", branch = "stream-end-hook", features = [
    "lb",
    "proxy",
    "cache",
] }
async-trait = "0.1.89"
pingora-runtime = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "registry",
] }
tracing-error = "0.2.1"
arc-swap = "1.7.1"
log = "0.4.28"
futures = "0.3.31"
smallvec = "1.15.1"
derivative = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"
pingora-ketama = "0.6.0"
fnv = "1.0.7"
serde = { version = "1.0.228", features = ["derive"] }
http = "1.3.1"
serde_json = "1.0.145"
derive_more = { version = "2.0.1", features = ["from", "into"] }
matchit = "0.9.0"
regex = "1.12.2"
color-eyre = "0.6.5"
atomic_float = "1.1.0"


[dev-dependencies]
worker = { path = "../worker" }
reqwest = { version = "0.12", features = ["json"] }
fake = "4.4"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "load_balancer"
harness = false

[[bench]]
name = "adaptive_load_balancer"
harness = false
